Refactor API for org and proj
